# cafe-desktop

./: .build.yml  .travis.yml  AUTHORS  COPYING-DOCS  COPYING.LIB  Makefile.am  NEWS  README  autogen.sh  cafe-desktop.pot  config.meson.h  configure.ac  index.html  makepot  meson.build  meson_options.txt  output_94f5e4c3a96eadda878413ee8bea1896d26bc14c
.tx/: config
2021-06-27-125014-13987-1@5fdc25d05cc0_master/: index.html  report-07eff9.html  report-08ae5b.html  report-0a2148.html  report-178202.html  report-278235.html  report-2d19a3.html  report-40cc26.html  report-462578.html  report-4982a6.html  report-520cd8.html  report-5598a0.html  report-5e29c3.html  report-72c7a0.html  report-75383f.html  report-7e6c87.html  report-8ce610.html  report-94b723.html  report-9b7b3a.html  report-a1ab85.html  report-aab798.html  report-aba3d0.html  report-ae9d75.html  report-bc1284.html  report-c1978b.html  report-cba6c1.html  report-cf63bf.html  report-e8ae62.html  report-ecdfd8.html  report-ee1a13.html  report-f1ec12.html
2023-07-13-192041-15917-1@f0e27b799a00_devel/: index.html  output_f0e27b799a0010da97ff49ded4bc6970cc4e494e  report-116842.html  report-25ea44.html  report-30e8a4.html  report-425c9c.html  report-689d47.html  report-8fac16.html  report-b449e8.html  report-d0e85f.html  report-d63bea.html
2023-07-13-192316-2577-cppcheck@f0e27b799a00_devel/: 1.html  7.html  9.html
2023-07-13-193246-15919-1@f0e27b799a00_master/: index.html  report-116842.html  report-25ea44.html  report-30e8a4.html  report-425c9c.html  report-689d47.html  report-8fac16.html  report-b449e8.html  report-d0e85f.html  report-d63bea.html
2023-07-13-193518-1319-cppcheck@f0e27b799a00_master/: 0.html  10.html  4.html  5.html  8.html  commitmsg  index.html  output_f0e27b799a0010da97ff49ded4bc6970cc4e494e
2023-07-13-193740-15919-1@3b14774fb46a_devel/: commitmsg  index.html  report-116842.html  report-25ea44.html  report-30e8a4.html  report-425c9c.html  report-689d47.html  report-8fac16.html  report-b449e8.html  report-d0e85f.html  report-d63bea.html
2023-07-13-194006-9913-cppcheck@3b14774fb46a_devel/: 2.html  5.html  output_3b14774fb46a08d6f77a24fbb2187a7be88520a9
2023-07-13-194629-15917-1@3b14774fb46a_master/: index.html  output_3b14774fb46a08d6f77a24fbb2187a7be88520a9  report-116842.html  report-25ea44.html  report-30e8a4.html  report-425c9c.html  report-689d47.html  report-8fac16.html  report-b449e8.html  report-d0e85f.html  report-d63bea.html
2023-07-13-194918-5889-cppcheck@3b14774fb46a_master/: 0.html  1.html  3.html  6.html  stats.html
2023-09-13-084631-15679-1@f84a707492fc_devel/: index.html  output_f84a707492fc6760370783c97f9269097f9e1f34  report-116842.html  report-25ea44.html  report-30e8a4.html  report-425c9c.html  report-689d47.html  report-8fac16.html  report-b449e8.html  report-d0e85f.html  report-d63bea.html  report-fb6164.html
2023-09-13-084910-2403-cppcheck@f84a707492fc_devel/: 11.html  index.html
2023-09-13-085334-15678-1@80fd39b0216d_devel/: commitmsg  index.html  report-116842.html  report-25ea44.html  report-30e8a4.html  report-425c9c.html  report-689d47.html  report-8fac16.html  report-b449e8.html  report-d0e85f.html  report-d63bea.html  report-fb6164.html
2023-09-13-085601-9939-cppcheck@80fd39b0216d_devel/: output_80fd39b0216ddcd5ef08f815dfbeb81c85bdadf5
2023-09-13-090005-15681-1@80fd39b0216d_master/: index.html  output_80fd39b0216ddcd5ef08f815dfbeb81c85bdadf5  report-116842.html  report-25ea44.html  report-30e8a4.html  report-425c9c.html  report-689d47.html  report-8fac16.html  report-b449e8.html  report-d0e85f.html  report-d63bea.html  report-fb6164.html
2024-01-21-022836-15813-1@ed9f53a5bff5_devel/: index.html  report-116842.html  report-25ea44.html  report-30e8a4.html  report-425c9c.html  report-689d47.html  report-891289.html  report-8fac16.html  report-b449e8.html  report-d0e85f.html  report-d63bea.html  report-fb6164.html
2024-01-21-023035-4944-cppcheck@ed9f53a5bff5_devel/: 1.html  12.html  3.html  5.html  6.html  8.html  9.html  output_ed9f53a5bff572d9d8ceb9ca9dbbe5380fc62f20  stats.html
2024-01-21-023523-15813-1@ed9f53a5bff5_master/: index.html  output_ed9f53a5bff572d9d8ceb9ca9dbbe5380fc62f20  report-116842.html  report-25ea44.html  report-30e8a4.html  report-425c9c.html  report-689d47.html  report-891289.html  report-8fac16.html  report-b449e8.html  (+3 more)
cafe-about/: Makefile.am  cafe-about.c  cafe-about.desktop.in  cafe-about.h.in  cafe-version.xml.in  meson.build
icons/: Makefile.am  meson.build
libcafe-desktop/: Makefile.am  cafe-bg-crossfade.c  cafe-bg-crossfade.h  cafe-bg.c  cafe-bg.h  cafe-colorbutton.c  cafe-colorbutton.h  cafe-colorsel.c  cafe-colorsel.h  cafe-colorseldialog.c  cafe-colorseldialog.h  cafe-dconf.c  cafe-dconf.h  cafe-desktop-2.0-uninstalled.pc.in  cafe-desktop-2.0.pc.in  cafe-desktop-item.c  cafe-desktop-item.h  cafe-desktop-thumbnail.c  cafe-desktop-thumbnail.h  cafe-desktop-utils.c  cafe-desktop-utils.h  cafe-desktop.abi  cafe-desktop.h  cafe-desktop.map  cafe-gsettings.c  cafe-gsettings.h  cafe-hsv.c  cafe-hsv.h  cafe-languages.c  cafe-languages.h  cafe-rr-config.c  cafe-rr-config.h  cafe-rr-labeler.c  cafe-rr-labeler.h  cafe-rr-output-info.c  cafe-rr-private.h  cafe-rr.c  cafe-rr.h  display-name.c  edid-parse.c  (+8 more)
schemas/: Makefile.am  meson.build  org.cafe.accessibility-keyboard.gschema.xml  org.cafe.accessibility-startup.gschema.xml  org.cafe.applications-at-mobility.gschema.xml  org.cafe.applications-at-visual.gschema.xml  org.cafe.applications-browser.gschema.xml  org.cafe.applications-calculator.gschema.xml  org.cafe.applications-messenger.gschema.xml  org.cafe.applications-office.gschema.xml  org.cafe.applications-terminal.gschema.xml  org.cafe.background.gschema.xml.in  org.cafe.debug.gschema.xml  org.cafe.file-views.gschema.xml  org.cafe.interface.gschema.xml  org.cafe.lockdown.gschema.xml  org.cafe.sound.gschema.xml  org.cafe.thumbnail-cache.gschema.xml  org.cafe.thumbnailers.gschema.xml  org.cafe.typing-break.gschema.xml
tools/: Makefile.am  cafe-color-select.c  cafe-color-select.desktop.in  meson.build
(+592 files in other folders)
