gsettings_SCHEMAS = \
	org.cafe.accessibility-keyboard.gschema.xml \
	org.cafe.accessibility-startup.gschema.xml \
	org.cafe.applications-at-mobility.gschema.xml \
	org.cafe.applications-at-visual.gschema.xml \
	org.cafe.applications-browser.gschema.xml \
	org.cafe.applications-calculator.gschema.xml \
	org.cafe.applications-messenger.gschema.xml \
	org.cafe.applications-office.gschema.xml \
	org.cafe.applications-terminal.gschema.xml \
	org.cafe.background.gschema.xml \
	org.cafe.debug.gschema.xml \
	org.cafe.file-views.gschema.xml \
	org.cafe.interface.gschema.xml \
	org.cafe.lockdown.gschema.xml \
	org.cafe.sound.gschema.xml \
	org.cafe.thumbnail-cache.gschema.xml \
	org.cafe.thumbnailers.gschema.xml \
	org.cafe.typing-break.gschema.xml

@GSETTINGS_RULES@

EXTRA_DIST = \
	$(gsettings_SCHEMAS) \
	meson.build

CLEANFILES = \
	*.gschema.valid
